ROX-5352 Add roxctl command to generate sensor certs (#6214)

--- a/roxctl/help/help.properties
+++ b/roxctl/help/help.properties
@@ -162,7 +162,10 @@ sensor.generate.openshift.long = Generate the required YAML configuration files 
 sensor.get-bundle.short = Download a bundle with the required YAML configuration files to deploy StackRox Sensor
 sensor.get-bundle.long = Download a bundle with the required YAML configuration files to deploy StackRox Sensor, Collector, and Admission controller (optional)
 
-sensor.generate.short = Commands that generate YAML configuration files to deploy StackRox Sensor
+sensor.generate-certs.short = Download a YAML file with renewed certificates for StackRox Sensor, Collector, and Admission controller (if deployed)
+sensor.generate-certs.long =
+
+sensor.generate.short = commands that generate yaml configuration files to deploy stackrox sensor
 sensor.generate.long =
 
 sensor.short = Commands related to the Sensor service
