--- a/ui/apps/platform/package.json
+++ b/ui/apps/platform/package.json
@@ -113,8 +113,8 @@
         "test-e2e-demo": "./scripts/cypress.sh run --config integrationFolder=cypress/demo --reporter mocha-multi-reporters --reporter-options configFile=cypress/mocha.config.js",
         "storybook": "start-storybook",
         "build-storybook": "build-storybook -c .storybook",
-        "tailwind": "tailwind build ./src/app.css -o ./src/index.css",
-        "watch:tailwind": "postcss ./src/app.css -o ./src/index.css -w",
+        "tailwind": "tailwind build ./src/app.tw.css -o ./src/index.css",
+        "watch:tailwind": "postcss ./src/app.tw.css -o ./src/index.css -w",
         "watch:react": "HTTPS=true react-scripts start",
         "generate-graphql-possible-types": "ROX_AUTH_TOKEN=$(./scripts/get-auth-token.sh) node scripts/generate-graphql-possible-types.js",
         "eject": "react-scripts eject"
@@ -123,9 +123,9 @@
         "@babel/core": "^7.10.2",
         "@cypress/code-coverage": "^3.8.1",
         "@cypress/instrument-cra": "^1.1.1",
+        "@stackrox/tailwind-config": "*",
         "@storybook/addon-info": "^5.3.19",
         "@storybook/react": "^5.3.19",
-        "@tailwindcss/custom-forms": "^0.2.1",
         "@testing-library/jest-dom": "^4.1.0",
         "@testing-library/react": "^9.1.4",
         "@testing-library/react-hooks": "^3.2.1",
