CI: Catch failures from external-backup and destructive tests (#6283)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2724,6 +2724,16 @@ jobs:
           command: |
             make -C tests destructive-tests
 
+      - run:
+          name: Collect final stackrox logs
+          command: |
+            ./scripts/ci/collect-service-logs.sh stackrox /tmp/final-stackrox-logs
+          when: always
+
+      - store_artifacts:
+          path: /tmp/final-stackrox-logs
+          destination: final-stackrox-logs
+
       - *storeK8sLogs
       - teardown-gke
 
