--- a/.ossls.yml
+++ b/.ossls.yml
@@ -6,6 +6,7 @@ yarn:
   node-modules-dirs:
     - ui/node_modules
     - ui/apps/platform/node_modules
+    - ui/packages/tailwind-config/node_modules
 
 patterns:
   - "*AUTHOR*"
