ROX-5400: Add cluster health components with feature flag (#6303)
* ROX-5400: Add cluster health components with feature flag

* Reset clusterTablePollingInterval = 5000

* Retype to get rid of possible invisible character

* Add new columns to Cypress  smoke test with feature flag

* Correct syntax and prettier errors on clusters.test.js

* Define feature flag for gke-ui-e2e-tests and invert condition in Cypress test

* Let tooltip table have automatic width and improve conditional colors

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2778,6 +2778,7 @@ jobs:
       - ROX_AUTH_TEST_MODE_UI: true
       - ROX_SUPPORT_SLIM_COLLECTOR_MODE: true
       - ROX_AWS_SECURITY_HUB_INTEGRATION: true
+      - ROX_CLUSTER_HEALTH_MONITORING: true
 
     steps:
       - checkout
