ROX-5251: Process Listening Port Info in Sensor and Central Pipelines (#6289)

--- a/image/templates/helm/sensorchart/templates/sensor.yaml
+++ b/image/templates/helm/sensorchart/templates/sensor.yaml
@@ -236,6 +236,10 @@ spec:
           value: {{ .Values.config.collectionMethod }}
         - name: GRPC_SERVER
           value: {{ .Values.endpoint.advertised }}
+        {{ range .Values.envVars -}}
+        - name: {{ .name }}
+          value: {{ .value | quote}}
+        {{ end }}
         resources:
           limits:
             cpu: 750m
