--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2846,6 +2846,7 @@ jobs:
       - ROX_ADMISSION_CONTROL_ENFORCE_ON_UPDATE: true
       - ROX_AUTH_TEST_MODE_UI: true
       - ROX_CLUSTER_HEALTH_MONITORING: true
+      - ROX_NETWORK_GRAPH_PORTS: true
 
     steps:
       - run-qa-tests:
@@ -2867,6 +2868,7 @@ jobs:
       - ROX_SENSOR_DETECTION: true
       - ROX_AUTH_TEST_MODE_UI: true
       - ROX_SUPPORT_SLIM_COLLECTOR_MODE: true
+      - ROX_NETWORK_GRAPH_PORTS: true
 
     steps:
       - checkout
@@ -2898,6 +2900,7 @@ jobs:
       - ROX_ADMISSION_CONTROL_ENFORCE_ON_UPDATE: true
       - ROX_AUTH_TEST_MODE_UI: true
       - ROX_SUPPORT_SLIM_COLLECTOR_MODE: true
+      - ROX_NETWORK_GRAPH_PORTS: true
 
     steps:
       - run-qa-tests:
@@ -2927,6 +2930,7 @@ jobs:
       - ROX_AUTH_TEST_MODE_UI: true
       - ROX_ROCKSDB: true
       - ROX_SUPPORT_SLIM_COLLECTOR_MODE: true
+      - ROX_NETWORK_GRAPH_PORTS: true
 
     steps:
       - run-qa-tests:
